# stack-rag-track

./: README.md
rag-track/: README.md  pyproject.toml  requirements.txt
rag-track/conf/: logging.yml
rag-track/conf/base/: catalog.yml  parameters_embedding.yml  parameters_extract.yml
rag-track/docs/source/: conf.py  index.rst
rag-track/src/rag_track/: __init__.py  __main__.py  settings.py
rag-track/src/rag_track/pipelines/embedding/: __init__.py  nodes.py  pipeline.py
rag-track/src/rag_track/pipelines/extract/: __init__.py  nodes.py  pipeline.py
rag-track/tests/pipelines/embedding/: test_pipeline.py
rag-track/tests/pipelines/extract/: test_pipeline.py
